tests/expectations/compiler/structs/inline_member_fail.out
Error [ETYC0372013]: Composite initialization expression for `Foo` is missing member `x`.
    --> compiler-test:8:22
     |
   8 |         let a: Foo = Foo { y };
     |                      ^^^^^^^^^
